# simulate-swap

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  shell.nix
results/: 1673709882.json
simulate_swap/: main.py
simulate_swap/utils/: encode_swap.py  simulate.py
