[tool.poetry]
name = "simulate_swap"
version = "0.0.1"
description = "Using BlockSec API to simulate a swap on a UniswapV2 style exchange"
authors = ["sandybradley"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
web3 = "^5.31.3"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
